syntax = "proto3";

package relationship.v1;

service FollowService {
  // Guest operations
  rpc FollowCast(FollowCastRequest) returns (FollowCastResponse);
  rpc UnfollowCast(UnfollowCastRequest) returns (UnfollowCastResponse);
  rpc ListFollowing(ListFollowingRequest) returns (ListFollowingResponse);
  rpc GetFollowStatus(GetFollowStatusRequest) returns (GetFollowStatusResponse);
  rpc CancelFollowRequest(CancelFollowRequestRequest) returns (CancelFollowRequestResponse);

  // Cast operations (for private casts)
  rpc ApproveFollow(ApproveFollowRequest) returns (ApproveFollowResponse);
  rpc RejectFollow(RejectFollowRequest) returns (RejectFollowResponse);
  rpc ListPendingFollowRequests(ListPendingFollowRequestsRequest) returns (ListPendingFollowRequestsResponse);
  rpc GetPendingFollowCount(GetPendingFollowCountRequest) returns (GetPendingFollowCountResponse);
  rpc ListFollowers(ListFollowersRequest) returns (ListFollowersResponse);
}

enum FollowStatus {
  FOLLOW_STATUS_UNSPECIFIED = 0;
  FOLLOW_STATUS_NONE = 1;      // Not following
  FOLLOW_STATUS_PENDING = 2;   // Follow request pending approval
  FOLLOW_STATUS_APPROVED = 3;  // Following
}

message FollowCastRequest {
  string cast_id = 1;
}

message FollowCastResponse {
  bool success = 1;
  FollowStatus status = 2; // Resulting follow status
}

message UnfollowCastRequest {
  string cast_id = 1;
}

message UnfollowCastResponse {
  bool success = 1;
}

message ListFollowingRequest {
  int32 limit = 1;
  string cursor = 2;
}

message ListFollowingResponse {
  repeated string cast_ids = 1;
  string next_cursor = 2;
  bool has_more = 3;
}

message GetFollowStatusRequest {
  repeated string cast_ids = 1;
}

message GetFollowStatusResponse {
  map<string, FollowStatus> statuses = 1; // cast_id -> follow status
}

message CancelFollowRequestRequest {
  string cast_id = 1;
}

message CancelFollowRequestResponse {
  bool success = 1;
}

message ApproveFollowRequest {
  string guest_id = 1;
}

message ApproveFollowResponse {
  bool success = 1;
}

message RejectFollowRequest {
  string guest_id = 1;
}

message RejectFollowResponse {
  bool success = 1;
}

message FollowRequestItem {
  string guest_id = 1;
  string guest_name = 2;
  string guest_image_url = 3;
  string requested_at = 4; // ISO8601
}

message ListPendingFollowRequestsRequest {
  int32 limit = 1;   // default: 20
  string cursor = 2; // optional
}

message ListPendingFollowRequestsResponse {
  repeated FollowRequestItem requests = 1;
  string next_cursor = 2;
  bool has_more = 3;
}

message GetPendingFollowCountRequest {}

message GetPendingFollowCountResponse {
  int32 count = 1;
}

message FollowerItem {
  string guest_id = 1;
  string guest_name = 2;
  string guest_image_url = 3;
  string followed_at = 4; // ISO8601
}

message ListFollowersRequest {
  int32 limit = 1;   // default: 20
  string cursor = 2; // optional
}

message ListFollowersResponse {
  repeated FollowerItem followers = 1;
  int32 total = 2;
  string next_cursor = 3;
  bool has_more = 4;
}
